fixed right-align

--- a/css/interface.css
+++ b/css/interface.css
@@ -942,6 +942,9 @@ header .btn,
   display: flex;
   height: 44px;
   align-items: center;
+}
+
+.flex-right {
   justify-content: flex-end;
 }
 
